--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -11,14 +11,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: 'macos-latest'
-            args: '--target aarch64-apple-darwin'
-            arch: 'silicon'
-            type: 'aarch64'
-          - platform: 'macos-latest'
-            args: '--target x86_64-apple-darwin'
-            arch: 'silicon'
-            type: 'x86_64'
+          - platform: "macos-latest"
+            args: "--target aarch64-apple-darwin"
+            arch: "silicon"
+            type: "aarch64"
+          - platform: "macos-latest"
+            args: "--target x86_64-apple-darwin"
+            arch: "silicon"
+            type: "x86_64"
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'npm'
+          cache: "npm"
 
       - name: install Rust stable (macos only)
         uses: dtolnay/rust-toolchain@stable
@@ -39,7 +39,7 @@ jobs:
       - name: Rust cache
         uses: swatinem/rust-cache@v2
         with:
-          workspaces: './src-tauri -> target'
+          workspaces: "./src-tauri -> target"
 
       - name: install frontend dependencies
         # If you don't have `beforeBuildCommand` configured you may want to build your frontend here too.
@@ -53,8 +53,8 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
           tagName: v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
-          releaseName: 'RClone Manager v__VERSION__'
-          releaseBody: 'See the assets to download this version and install.'
+          releaseName: "RClone Manager v__VERSION__"
+          releaseBody: "See the assets to download this version and install."
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
