feat: update GitHub Actions workflows to use GITHUB_TOKEN for authentication and enhance Docker setup in README and docker-compose

--- a/.github/workflows/release-portable.yml
+++ b/.github/workflows/release-portable.yml
@@ -162,4 +162,4 @@ jobs:
             *.zip
             *.tar.gz
         env:
-          GITHUB_TOKEN: ${{ secrets.TAURI_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
