--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "tauri": "tauri",
-    "headless": "npm run build && cd src-tauri && cargo run --bin rclone-manager-headless --features web-server -- --port 8080",
+    "headless-dev": "npm run tauri dev -- --config src-tauri/tauri.conf.headless.json --features web-server,updater",
+    "headless": "npm run tauri build -- --config src-tauri/tauri.conf.headless.json --features web-server,updater",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "format": "prettier --write \"src/**/*.{ts,html,scss,json}\"",
