refactor: update styles and improve component functionality
- Refactored repair-sheet component styles for improved visual consistency and reduced animation effects.
- Enhanced repair-sheet component logic with computed properties for repair icon and details.
- Updated quick-add-remote, about-modal, export-modal, keyboard-shortcuts-modal, preferences-modal, rclone-config-modal, restore-preview-modal, security-settings, and other modals to use a consistent shadow style.
- Improved file-viewer service to detect file types more accurately, including binary detection.
- Adjusted installation-options component to use class binding for better performance.
- Updated various components to use new shadow styles and hover effects for a more cohesive design.
- Added new icon for binary file types in the icon service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+      - "53682:53682" # Rclone OAuth Redirect. When you use authentication, you need to open this port.
     volumes:
       # Rclone configuration directory
       - rclone-config:/home/rclone-manager/.config/rclone
@@ -68,6 +69,7 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+      - "53682:53682" # Rclone OAuth Redirect. When you use authentication, you need to open this port.
     volumes:
       - rclone-config:/home/rclone-manager/.config/rclone
       - rclone-manager-config:/home/rclone-manager/.local/share/com.rclone.manager.headless
@@ -106,6 +108,7 @@ services:
     restart: unless-stopped
     ports:
       - "8443:8443"
+      - "53682:53682" # Rclone OAuth Redirect. When you use authentication, you need to open this port.
     volumes:
       - rclone-config:/home/rclone-manager/.config/rclone
       - rclone-manager-config:/home/rclone-manager/.local/share/com.rclone.manager.headless
