feat: integrate rcman-derive for simplified settings schema
- Added `rcman-derive` as a dependency to leverage derive macros for settings schema.
- Updated `Cargo.toml` to use versioning for the local `rcman` crate.
- Refactored settings management in `core.rs` to utilize `JsonSettingsManager`.
- Enhanced settings schema in `schema.rs` with derive macros for cleaner struct definitions.
- Implemented default values for settings structs.
- Improved initialization of `rcman` settings manager in `lib.rs` with fluent builder API.
- Registered sub-settings for remotes and backend with automatic migration.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,8 +47,9 @@ tokio-cron-scheduler = "0.13.0"
 croner = "3.0.1"
 sevenz-rust2 = "0.20.0"
 
-# rcman - Rust Config Manager library (local crate)
-rcman = { path = "../crates/rcman", features = ["backup", "keychain"] }
+# rcman - Rust Config Manager library
+# Path is used for local development, version is used when path is not available (crates.io)
+rcman = { version = "0.1.0", path = "../../rcman", features = ["backup", "keychain", "derive"] }
 
 # Implementation based on: https://github.com/tauri-apps/tauri/issues/12022
 # Until Tauri provides a built-in Rust API, this manual implementation is required
