--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,10 +25,10 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-dialog = "2"
 tokio = { version = "1.45.1", features = ["full", "process"] }
-tauri-plugin-http = "2"
+tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls"] }
 tauri-plugin-os = "2"
 zip = "4.0.0"
-reqwest = { version = "0.12.19", features = ["json", "blocking"] }
+reqwest = { version = "0.12.19", default-features = false, features = ["json", "blocking", "rustls-tls"] }
 tauri-plugin-store = "2"
 tauri-plugin-notification = "2"
 once_cell = "1.21.3"
@@ -49,7 +49,8 @@ sevenz-rust2 = "0.20.0"
 
 # rcman - Rust Config Manager library
 # Path is used for local development, version is used when path is not available (crates.io)
-rcman = { version = "0.1.0", path = "../../rcman", features = ["backup", "keychain", "derive"] }
+# Note: keychain feature is added via target-specific dependencies below (not supported on Android/iOS)
+rcman = { version = "0.1.0", path = "../../rcman", features = ["backup", "derive"] }
 
 # Implementation based on: https://github.com/tauri-apps/tauri/issues/12022
 # Until Tauri provides a built-in Rust API, this manual implementation is required
@@ -88,8 +89,9 @@ keyring = { version = "3", features = ["apple-native"] }
 tauri-plugin-autostart = "2"
 tauri-plugin-global-shortcut = "2"
 tauri-plugin-single-instance = "2"
-tauri-plugin-updater = { version = "2", optional = true }
+tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"], optional = true }
 url = { version = "2.5", optional = true }
+rcman = { version = "0.1.0", path = "../../rcman", features = ["keychain"] }
 
 [features]
 default = ["updater"]
