--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -50,7 +50,7 @@ sevenz-rust2 = "0.20.0"
 # rcman - Rust Config Manager library
 # Path is used for local development, version is used when path is not available (crates.io)
 # Note: keychain feature is added via target-specific dependencies below (not supported on Android/iOS)
-rcman = { version = "0.1.1", path = "../../rcman", features = ["backup", "derive", "profiles"] }
+rcman = { version = "0.1.2", path = "../../rcman", features = ["backup", "derive", "profiles", "toml"] }
 
 urlencoding = "2.1"
 
@@ -90,7 +90,7 @@ tauri-plugin-global-shortcut = "2"
 tauri-plugin-single-instance = "2"
 tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"], optional = true }
 url = { version = "2.5", optional = true }
-rcman = { version = "0.1.0", path = "../../rcman", features = ["keychain", "profiles"] }
+rcman = { version = "0.1.2", path = "../../rcman", features = ["keychain", "profiles"] }
 
 [features]
 default = ["updater"]
