feat: Add log file support and improve modal responsiveness
- Added log file support for both app and rclone logs, with centralized log directory management.
- Implemented log rotation with timestamp-based naming for log files.
- Enhanced modal behavior on mobile devices by transforming modals into bottom sheets.
- Updated styles for various components to improve layout and responsiveness.
- Added new icons for user and clock functionalities.
- Updated dependencies in Cargo.toml and Cargo.lock for improved performance and stability.
- Refactored backup manager to streamline backup analysis and removed legacy support.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -50,7 +50,7 @@ sevenz-rust2 = "0.20.0"
 # rcman - Rust Config Manager library
 # Path is used for local development, version is used when path is not available (crates.io)
 # Note: keychain feature is added via target-specific dependencies below (not supported on Android/iOS)
-rcman = { version = "0.1.2", path = "../../rcman", features = ["backup", "derive", "profiles", "toml"] }
+rcman = { version = "0.1.2", path = "../../rcman", features = ["backup", "derive", "profiles"] }
 
 urlencoding = "2.1"
 
