--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,6 +43,7 @@ thiserror = "2.0"
 netstat2 = "0.11.2"
 sysinfo = "0.33.1"
 tauri-plugin-shell = "2"
+tauri-plugin-window-state = "2"
 tokio-cron-scheduler = "0.13.0"
 croner = "3.0.1"
 sevenz-rust2 = "0.20.0"
