feat: Add syntax highlighting and markdown preview to the file viewer, and simplify file type detection.

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@ngx-translate/http-loader": "^17.0.0",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-os": "^2.3.2",
+    "@types/highlight.js": "^9.12.4",
     "cronstrue": "^3.9.0",
+    "highlight.js": "^11.11.1",
     "marked": "^17.0.0",
     "ngx-mat-timepicker": "^21.0.0",
     "rxjs": "~7.8.2",
