feat: update VFS control panel link and improve shortcut handling
- Changed the link in the VFS control panel to point to GitHub issue #9120.
- Enhanced shortcut handling to block shortcuts when the file viewer is open.
- Added a method to check if the file viewer modal is open.

refactor: simplify confirm modal logic and improve icon handling

- Removed the destructive action check from the confirm modal.
- Simplified icon retrieval logic for modal and confirm button.
- Added optional icon properties to the ConfirmDialogData interface.

feat: add serving status badge to remote card

- Introduced a new status badge for serving state in the remote card component.
- Updated styles for the serving badge to include a pulsing animation.

fix: improve cron input section layout in app operation config

- Adjusted the layout of the cron input section for better spacing and organization.

style: update custom theme styles for better consistency

- Modified border-radius values for various components to ensure a consistent look.

feat: implement custom context menu with refresh and clear cache options

- Added a custom context menu that appears on right-click with options to refresh the UI and clear cache.
- Implemented feedback notification for cache clearing action.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -51,7 +51,7 @@ sevenz-rust2 = "0.20.0"
 # rcman - Rust Config Manager library
 # Path is used for local development, version is used when path is not available (crates.io)
 # Note: keychain feature is added via target-specific dependencies below (not supported on Android/iOS)
-rcman = { version = "0.1.2", path = "../../rcman", features = ["backup", "derive", "profiles"] }
+rcman = { version = "0.1.4", features = ["backup", "derive", "profiles"] }
 
 urlencoding = "2.1"
 futures = { version = "0.3" }
@@ -88,10 +88,13 @@ keyring = { version = "3", features = ["apple-native"] }
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
 tauri-plugin-global-shortcut = "2"
-tauri-plugin-single-instance = "2"
+# Single instance plugin
+# TODO: Remove this when the plugin is merged into tauri
+# https://github.com/tauri-apps/plugins-workspace/pull/3194
+tauri-plugin-single-instance = { git = "https://github.com/mrquantumoff/plugins-workspace", branch = "single-instance" }
 tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"], optional = true }
 url = { version = "2.5", optional = true }
-rcman = { version = "0.1.2", path = "../../rcman", features = ["keychain", "profiles"] }
+rcman = { version = "0.1.4", features = ["keychain", "profiles"] }
 
 [features]
 default = ["updater"]
