feat: add asset pattern for multiple platforms in release workflows

--- a/.github/workflows/release-headless.yml
+++ b/.github/workflows/release-headless.yml
@@ -13,8 +13,10 @@ jobs:
         include:
           - platform: "ubuntu-22.04"
             arch: "x86_64"
+            assetPattern: "[name]_[arch][ext]"
           - platform: "ubuntu-22.04-arm"
             arch: "aarch64"
+            assetPattern: "[name]_[arch][ext]"
 
     runs-on: ${{ matrix.platform }}
     steps:
