--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -11,14 +11,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: "windows-latest"
+          - platform: "windows-11-arm"
             args: "--target x86_64-pc-windows-msvc"
             arch: "arm64"
             type: "x86_64"
-          - platform: "windows-latest"
+            assetPattern: "[name]_[arch][ext]"
+          - platform: "windows-11-arm"
             args: "--target aarch64-pc-windows-msvc"
             arch: "arm64"
             type: "aarch64"
+            assetPattern: "[name]_[arch][ext]"
 
     runs-on: ${{ matrix.platform }}
     steps:
